app-test-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test-1
  labels:
    app: app-test-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-test-1
  template:
    metadata:
      labels:
        app: app-test-1
    spec:
      containers:
      - name: app-test-1
        image: diegokraenau/app-test-1:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /app-test-1
            port: 3000
          successThreshold: 3
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: app-test-1
spec:
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
  type: NodePort
  selector:
    app: app-test-1
