app-test-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test-2
  labels:
    app: app-test-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-test-2
  template:
    metadata:
      labels:
        app: app-test-2
    spec:
      containers:
      - name: app-test-2
        image: diegokraenau/app-test-2:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /app-test-2
            port: 3001
          successThreshold: 3
        ports:
        - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: app-test-2
spec:
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30001
  type: NodePort
  selector:
    app: app-test-2
